--- a/listado de animes/listado de animes.css
+++ b/listado de animes/listado de animes.css
@@ -2301,94 +2301,354 @@ body{
 
 }
 
-	
+/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
+	/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
+	/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
+	/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
+	@media only screen and (max-width: 470px){
 
-/*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
-/*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
-/*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
-/*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
-@media only screen and (max-width: 499px){
+		.body::-webkit-scrollbar{
+			width: 3px;
+			height: 3px;
+		}
+		.body::-webkit-scrollbar-thumb{
+			background-color: #777;
+			border-radius: 2px;
+		}
 
-	.body::-webkit-scrollbar{
-		width: 3px;
-		height: 3px;
+		.body::-webkit-scrollbar-track{
+			background-color: #000;
+			border-radius: 2px;
+		}
+		.barra-de-navegacion, .ventanas{
+			display: none;
+
+		}
+
+		.barra-de-navegacion-responsive{
+			transform: translateY(-664px);
+			width: 100vw;
+			display: block;
+
+		}
+
+		.logo-living-responsive{
+			transform: translateX(115px);
+		}
+		.icono-de-inicio-responsive{
+			transform: translateX(215px);
+			
+		}
+
+		.modal{
+			transform: translateY(-664px);
+		}
+
+		.input{
+			margin-top: 10px;
+			margin-bottom: 5px;
+			transform: translateX(10px);
+		}
+		.input input{
+			width: 150px;
+			padding: 3px 0px 5px 7px;
+			font-size: 12px;
+			background-color: #533;
+			border: 1px solid #600;
+			outline: none;
+		}
+		.input input:focus{
+			outline: 2px solid #900;
+			animation: agrandarInputResponsive .5s forwards;
+			
+		}
+		@keyframes agrandarInputResponsive{
+			0%{
+
+			}
+			100%{
+				width: 220px;
+			}
+		}
+		.buscador-responsive{
+			transform: translateY(-3px);
+		}
+
+		.lista-de-series-responsive{
+			display: block;
+		}
+			
+		.portada-container{
+			margin-top: 10px;
+			width: 90vw;
+			height: 235px;
+			transform: translateX(24px);
+		}
+		
+		.imagen-portada img{
+			width: 100%;
+			height: 100%;
+		}
+
+		
+		.informacion, .pie-de-titulo, .sombra, .sombra-2{
+			display: none;
+		}
+		
+		.pelicula{
+			transform: translateY(315px);
+			margin-left: 40px;
+			width: 387px;
+			overflow: hidden;
+		}
+
+		.titulo{
+			width: 300px;
+			transform: translateY(33px);
+			height: 40px;
+		}
+		.titulo h2{
+			font-size: 20px;
+			transform: translateY(-35px);
+		}
+		
+		.pelicula button{
+			width: 120px;
+			height: 25px;
+			font-size: 12px;
+			border-radius: 2px;
+			transform: translateX(265px);
+		}
+
+		.puntos{
+			transform: translateY(-305px);
+			margin-left: 180px;
+		}
+
+		.botones-portada{
+			display: none;
+		}
+
+		.botones-portada-responsive{
+			display: block;
+			transform: translateY(-255px);
+			margin-left: 25px;
+		}
+		.barra-de-navegacion-responsive{
+			display: block;
+			display: flex;
+			padding-top: 10px;
+			position: fixed;
+		}
+		.seccion-de-presentacion-responsive{
+			display: block;
+		}
+
+		.avisos, .aside{
+			display: none;
+		}
+
+		.titulo-del-grid{
+			margin-left: 30px;
+			font-size: 9.5px;
+			margin-right: 20px;
+			transform: translateY(-160px);
+			border-bottom: none;
+			height: 30px;
+		}
+		
+		.supremo{
+			margin: 300px 10px 20px 10px;
+			width: 100vw;
+			display: flex;
+			flex-direction: column;
+		}
+
+		
+
+		.container-redes-sociales{
+			transform: translateY(-50px);
+			margin-left: -5px;
+		}
+		
+		.titulo-redes{
+			display: block;
+		}
+
+		.redes-sociales{
+			display: flex;
+			flex-direction: row;
+		}
+
+		.redes-sociales img{
+			margin-right: 7px;
+
+		}
+		.main{
+		width: 90vw;
+		margin-left: 10px;
+		margin-right: 25px;
 	}
-	.body::-webkit-scrollbar-thumb{
-		background-color: #777;
-		border-radius: 2px;
+	.div-grid-h2 h2{
+		font-size: 25px;
+	}
+	.poster-temporada{
+		width: 35%;
+		height: 190px;
 	}
 
-	.body::-webkit-scrollbar-track{
-		background-color: #000;
-		border-radius: 2px;
+	.info-temporada{
+		width: 65%;
+		margin-left: 10px;
 	}
-	.barra-de-navegacion, .ventanas{
-		display: none;
+	.info-temporada p{
+		padding-top: 2px;
+		padding-bottom: 2px;
+		font-size: 11px;
 	}
-	.barra-de-navegacion-responsive{
-		display: block;
-		display: flex;
-		padding-top: 10px;
-		position: fixed;
-
-	}
-	
-
-	.input{
-		margin-top: 10px;
+	.info-temporada h3{
 		margin-bottom: 5px;
-		transform: translateX(10px);
+		font-size: 20px;
 	}
-	.input input{
-		width: 150px;
-		padding: 3px 0px 5px 7px;
-		font-size: 12px;
-		background-color: #533;
-		border: 1px solid #600;
-		outline: none;
+	.info-temporada p:nth-child(3){
+		padding-bottom: 5px;
+		margin-bottom: 5px;
 	}
-	.input input:focus{
-		outline: 2px solid #900;
-		animation: agrandarInputResponsive .5s forwards;
+
+	.info-temporada p:nth-child(5){
+		padding-bottom: 5px;
+		margin-bottom: 5px;
+	}
+
+	.info-temporada p:nth-child(7){
+		padding-bottom: 5px;
+		margin-bottom: 5px;
+	}
+
+	.info-temporada button{
+		padding: 3px 30px;
+		font-size: 11px;
+		margin-top: 8px;
+	}
+
+	.aside-responsive{
+			display: block;
+			width: 100vw;
+			transform: translateY(-480px);
+		}
+
+		
+	.titulo-aside-responsive{
+		margin-left: 15px;
+		border-left: 2px solid #900;
+		padding-left: 5px;
+		height: 23px;
+		width: 410px;
 		
 	}
-	@keyframes agrandarInputResponsive{
-		0%{
+
+	.item-aside-responsive{
+		margin: auto;
+		margin-top: 10px;
+		margin-bottom: 25px;
+		width: 93vw;
+		height: 180px;
+		margin-left: 15px;
+	
+
+	}
+
+	
+
+		.footer{
+			width: 100vw;
+			height: 150px;
+			display: flex;
+			flex-direction: column;
+
+			
+		
+		}
+		.footer-parrafo{
+			text-align: center;
+			font-family: verdana;
+			color: #b00;
+			font-size: 10px;
+			transform: translateY(10px);
+		}
+
+		.logo-de-cuevana{
+			transform: translateY(-20px);
+			margin: auto;
+			height: 30px;
 
 		}
-		100%{
-			width: 220px;
+
+		
+		.iconos-de-footer{
+			display: flex;
+			margin: auto;
+			margin-top: -50px;
+			transform: translateX(0px);
+			position: relative;
 		}
-	}
+
+		.iconos-de-footer img{
+			margin-right: 10px;
+			width: 30px;
+			height: 30px;
+		
+		}
+
+		.parrafo-final{
+			width: 90vw;
+			transform: translateY(-500px);
+			font-size: 12px;
+			border-left: 2px solid #900;
+			margin-left: 10px;
+		}
+
+	
+
+/*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
+/*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
+/*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
+/*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
+@media only screen and (max-width: 435px){
+
+		.barra-de-navegacion-responsive{
+			transform: translateY(-647px);
+		}
+
+		.logo-living-responsive{
+			transform: translateX(100px);
+		}
+		.icono-de-inicio-responsive{
+			transform: translateX(200px);
+			
+		}
+
+		.modal{
+			transform: translateY(-647px);
+		}
+
+
 	.buscador-responsive{
 		transform: translateY(-3px);
 	}
 
-	.lista-de-series-responsive{
-		display: block;
-	}
-		
+	
 	.portada-container{
 		margin-top: 10px;
-		width: 380px;
+		width:90vw;
 		height: 215px;
 		transform: translateX(24px);
 	}
-	
-	.imagen-portada img{
-		width: 100%;
-		height: 100%;
-	}
-
-	
-	.informacion, .pie-de-titulo, .sombra, .sombra-2{
-		display: none;
-	}
-	
+		
 	.pelicula{
 		transform: translateY(320px);
 		margin-left: 40px;
-		width: 364px;
+		width: 367px;
 		overflow: hidden;
 	}
 
@@ -2407,53 +2667,39 @@ body{
 		height: 20px;
 		font-size: 11px;
 		border-radius: 2px;
-		transform: translateX(255px);
+		transform: translateX(258px);
 	}
 
-	.puntos{
-		transform: translateY(-305px);
-		margin-left: 170px;
-	}
+		.puntos{
+			transform: translateY(-305px);
+			margin-left: 170px;
+		}
 
-	.botones-portada{
-		display: none;
-	}
+		
 
-	.botones-portada-responsive{
-		display: block;
-		transform: translateY(-255px);
-		margin-left: 17px;
-	}
+		.botones-portada-responsive{
+			display: block;
+			transform: translateY(-255px);
+			margin-left: 15px;
+		}
 	
-	.seccion-de-presentacion-responsive{
-		display: block;
-	}
 
-	.avisos, .aside{
-		display: none;
-	}
-	
 	.supremo{
 		margin: 300px 10px 0px 10px;
-		width: 425px;
+		width: 100vw;
 		display: flex;
 		flex-direction: column;
 	}
 
 	.main{
-		width: 410px;
+		width: 90%;
 		padding: 10px;
 		margin-top: 20px;
 	
 	}
 	
-	.titulo-redes{
-		display: block;
-	}
-
+	
 	.redes-sociales{
-		display: flex;
-		flex-direction: row;
 		margin-left: -10px;
 	}
 
@@ -2463,7 +2709,6 @@ body{
 	}
 	.div-grid-h2{
 		padding: 5px 10px;
-		background: linear-gradient(to right, #400, transparent)
 		
 	}
 	.div-grid-h2 h2{
@@ -2505,14 +2750,6 @@ body{
 		font-size: 12px;
 	}
 
-	.pie-de-temporada p:nth-child(2){
-		display: none;
-	}
-
-	.aside-responsive{
-		display: block;
-
-	}
 	.parrafo-final{
 		width: 410px;
 		font-size: 12px;
@@ -2523,44 +2760,10 @@ body{
 
 
 	.footer{
-		width: 100vh;
+		width: 100vw;
 		height: 150px;
-		display: flex;
-		flex-direction: column;
-
-		
+	}
 	
-	}
-	.footer-parrafo{
-		text-align: center;
-		font-family: verdana;
-		color: #b00;
-		font-size: 10px;
-		transform: translateY(10px);
-	}
-
-	.logo-de-cuevana{
-		transform: translateY(-20px);
-		margin: auto;
-		height: 30px;
-
-	}
-
-	
-	.iconos-de-footer{
-		display: flex;
-		margin: auto;
-		margin-top: -50px;
-		transform: translateX(0px);
-		position: relative;
-	}
-
-	.iconos-de-footer img{
-		margin-right: 10px;
-		width: 30px;
-		height: 30px;
-	
-	}
 	
 }
 
@@ -2568,8 +2771,7 @@ body{
 @media only screen and (max-width: 400px){
 
 	.barra-de-navegacion-responsive{
-		width: 100vh;
-		transform: translateY(-623px);
+		transform: translateY(-635px);
 	}
 	.logo-living-responsive{
 		transform: translateX(85px);
@@ -2580,7 +2782,7 @@ body{
 	}
 
 	.modal{
-		transform: translateY(-623px);
+		transform: translateY(-635px);
 	}
 
 	.seccion-de-presentacion-responsive p:nth-child(1){
@@ -2591,30 +2793,20 @@ body{
 
 	}
 
-	.portada-container{
-		width: 365px;
+		.portada-container{
+			width: 94vw;
 			height:	213px;
 			transform: translateX(12px);
 		}
 
-		.imagen-portada{
-			width: 365px;
-			height:	213px;
-		}
-
-		.imagen-portada img{
-			width: 365px;
-			height:	213px;
-			
-		}
-
+		
 		.pelicula{
 			transform: translateY(319px);
 			margin-left: 30px;
-			width: 347px;
+			width: 349px;
 		}
 		.pelicula button{
-			transform: translateX(238px);
+			transform: translateX(240px);
 		
 		}
 
@@ -2631,28 +2823,22 @@ body{
 		
 		.container-redes-sociales{
 			width: 360px;
-			margin-left: -20px;
+			margin-left: 0px;
 
 		}
 
-		.supremo{
-		margin: 300px 10px 0px 10px;
-		width: 390px;
-		display: flex;
-		flex-direction: column;
-	}
-
 		.main{
-			width: 375px;
+			width: 95vw;
 			padding: 10px;
 			margin-top: 20px;
+			margin-left: 0px;
 		}
 	
 	
 
 		.aside-responsive{
 			
-			width: 385px;
+			width: 100vw;
 			
 		}
 
@@ -2664,15 +2850,14 @@ body{
 		}
 
 		.item-aside-responsive{
-			width: 370px;
+			width: 94vw;
 			height: 160px;
 			transform: translateX(2px);
+			margin-left: 10px;
 
 		}
 
-		.footer{
-			width: 390px;
-		}
+	
 		.parrafo-final{
 			width: 380px;
 		}
@@ -2690,7 +2875,6 @@ body{
 /*DISEÑO RESPONSIVE PARA PANTALLAS 375PX*/
 @media only screen and (max-width: 385px){
 	.barra-de-navegacion-responsive{
-		width: 100vh;
 		transform: translateY(-623px);
 	}
 	.logo-living-responsive{
@@ -2715,20 +2899,9 @@ body{
 	}
 
 		.portada-container{
-			width: 347px;
+			width: 92vw;
 			height:	195px;
 			transform: translateX(15px);
-		}
-
-		.imagen-portada{
-			width: 347px;
-			height:	195px;
-		}
-
-		.imagen-portada img{
-			width: 347px;
-			height:	195px;
-			
 		}
 
 		
@@ -2753,20 +2926,17 @@ body{
 		}
 		
 		.container-redes-sociales{
-			width: 360px;
+			width: 90vw;
 			margin-left: -10px;
 
 		}
 
 		.supremo{
 			margin: 300px 7px 0px 7px;
-			width: 375px;
-			display: flex;
-			flex-direction: column;
+			
 		}	
 		
 		.main{
-			width: 363px;
 			padding: 5px;
 			margin-top: 20px;
 		}
@@ -2787,15 +2957,9 @@ body{
 		
 		
 
-		.aside-responsive{
-			
-			width: 365px;
-			
-		}
-
 		.titulo-aside-responsive{
 			margin-left: 10px;
-			width: 375px;
+			width: 100vw;
 			
 			
 		}
@@ -2807,12 +2971,9 @@ body{
 
 		}
 
-		.footer{
-			width: 375px;
-		}
-
+	
 		.parrafo-final{
-			width: 360px;
+			width: 90vw;
 		}
 
 		
@@ -2828,15 +2989,14 @@ body{
 /*DISEÑO RESPONSIVE PARA PANTALLAS 360PX*/
 @media only screen and (max-width: 370px){
 	.barra-de-navegacion-responsive{
-		width: 100vh;
-		transform: translateY(-611px);
+		transform: translateY(-613px);
 	}
 	.logo-living-responsive{
 		transform: translateX(75px);
 	}
 
 	.modal{
-		transform: translateY(-611px);
+		transform: translateY(-613px);
 	}
 
 	.icono-de-inicio-responsive{
@@ -2853,71 +3013,38 @@ body{
 	}
 
 		.portada-container{
-			width: 337px;
-			height:	185px;
+			width: 94vw;
+			height:	190px;
 			transform: translateX(12px);
-		}
-
-		.imagen-portada{
-			width: 337px;
-			height:	185px;
-		}
-
-		.imagen-portada img{
-			width: 337px;
-			height:	185px;
-			
 		}
 
 		
 
 		.pelicula{
 			transform: translateY(319px);
-			width: 319px;
+			width: 320px;
 		}
 		.pelicula button{
-			transform: translateX(210px);
+			transform: translateX(212px);
 		
 		}
 
 		.botones-portada-responsive{
-			display: block;
-			
 			margin-left: -20px;
 		}
 
 		.puntos{
-			
 			margin-left: 135px;
 		}
 		
 		.container-redes-sociales{
-			width: 360px;
 			margin-left: -10px;
 
 		}
-
-		.supremo{
-			margin: 300px 7px 0px 7px;
-			width: 360px;
-			
-		}	
 		
-		.main{
-			width: 347px;
-		}
-
-		.aside-responsive{
-			
-			width: 360px;
-			
-		}
 
 		.titulo-aside-responsive{
 			margin-left: 10px;
-			width: 360px;
-			
-			
 		}
 
 		.item-aside-responsive{
@@ -2926,16 +3053,9 @@ body{
 			transform: translateX(0px);
 
 		}
-
-		.footer{
-			width: 360px;
+		.parrafo-final{
+			width: 350px;
 		}
-
-		
-	
-	.parrafo-final{
-		width: 350px;
-	}
 }
 
 
@@ -2945,7 +3065,6 @@ body{
 /*DISEÑO RESPONSIVE PARA PANTALLAS 320PX*/
 @media only screen and (max-width: 340px){
 		.barra-de-navegacion-responsive{
-		width: 100vh;
 		transform: translateY(-600px);
 	}
 	.logo-living-responsive{
@@ -2983,23 +3102,11 @@ body{
 	}
 
 		.portada-container{
-			width: 310px;
-			height:	173px;
+			width: 97vw;
+			height:	176px;
 			transform: translateX(5px);
 		}
 
-		.imagen-portada{
-			width: 310px;
-			height:	173px;
-		}
-
-		.imagen-portada img{
-			width: 310px;
-			height:	173px;
-			
-		}
-
-		
 
 		.pelicula{
 			transform: translateY(319px);
@@ -3028,19 +3135,12 @@ body{
 		}
 		
 		.container-redes-sociales{
-			width: 320px;
-			margin-left: -20px;
+			margin-left: -10px;
 
 		}
 
-		.supremo{
-			margin: 300px 7px 0px 7px;
-			width: 320px;
-			
-		}	
-		
+	
 		.main{
-			width: 310px;
 			padding-left: 5px;
 		}
 
@@ -3051,21 +3151,14 @@ body{
 		.info-temporada h3{
 			font-size: 15px;
 		}
-		.aside-responsive{
-			
-			width: 320px;
-			
-		}
+		
 
 		.titulo-aside-responsive{
 			margin-left: 7px;
-			width: 320px;
-			
-			
-		}
+			}
 
 		.item-aside-responsive{
-			width: 308px;
+			width: 94vw;
 			height: 150px;
 			transform: translateX(0px);
 
@@ -3075,10 +3168,5 @@ body{
 			width: 310px;
 		}
 
-		.footer{
-			width: 320px;
-		}
-
-		
 		
 	}
